--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body{}
         padding: 20% 0% 0 0%;
         text-align: center;
     }
+    .mdui-card{
+        padding: 2em;
+    }
+    .song-cover>img{
+        height: auto;
+    }
     .core-main{
         padding: 20% 0% 0 0%;
     }
